tests/semantic/fact_empty/fact_empty.err
Error: syntax error, unexpected ) in file fact_empty.dl at line 12
edge( ).
------^--
1 errors generated, evaluation aborted
